# diffeq

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_classical_explicit_arsenal.ipynb  02_functional_analysis_distributions.ipynb  03_tensor_fields_conservation_laws.ipynb  04_symmetry_lie_theory_integrability.ipynb  05_stochastic_rough_fractional_nonlocal.ipynb  06_jet_bundles_exterior_differential_systems.ipynb  07_microlocal_analysis_dmodules_categorical_resolution.ipynb
src/diffeq/: __init__.py
src/diffeq/core/: __init__.py  config.py  plotting.py  solvers.py  utils.py
src/diffeq/visualizations/: __init__.py  complex_plane.py  special_functions.py
src/diffeq/widgets/: __init__.py  base.py  chaos_slider.py  phase_portrait.py
